update speaker notes

--- a/rconf_preso.qmd
+++ b/rconf_preso.qmd
@@ -63,6 +63,8 @@ to set us up for this talk, I want to share this quote as a little inspo content
 we're all "masters" of something (master being a term that exists on a spectrum and can be loosely defined)
 sometimes we forget just how much we know, or we might be "masters" of
 different things, and it's worthwhile to remember our blind spots and share what we do know. 
+
+everyone has something to share- don't sit out there and think u have nothing
 :::
 
 ## {background-image="imgs/Think_Data_Are.png" fig-alt="A white background slide with confetti in the corners, with hand-drawn table of fake data, binary numbers, pie chart and line chart to illustrate different forms data can take on."}
@@ -109,61 +111,64 @@ data are scientific, while very creative, it can also be rigorous way to study w
 EVERYWHERE! the more you look, the more you see! this makes it really fun to talk about data with other people- just ask my friends n fam haha
 :::
 
-## {background-image="imgs/invite.png"}
+## {background-image="imgs/invite.png" fig-alt="White background slide with confetti in corners and handwritten party invitiation that says 'Who: Everyone!; What: Talk about data!; Where: Wherever!; When: Whenever!; Why: It's cool! (& Useful); How: Excitement & Curiosity'"}
 
 ![](imgs/emoji_party.png){.absolute top="45%" right="5%" width="350" height="350"}
 
 ::: {.notes}
-YOU'RE INVITED! we're all at the biggest data party there is, but I'm formally inviting you to another. 
+we're all at the biggest data party there is, but I'm formally inviting you to another. 
 In this one, it's about talking about data, especially with ppl who think they aren't "data people"
 Like a good party invite, it's a lot more fun if you've got all the
-details down (unless surprise party, but someone should have the details
-then) 
+details down (unless surprise party, but someone should have the details then) 
 :::
 
-## {background-image="imgs/Who_Slide_1.png"}
+## {background-image="imgs/Who_Slide_1.png" fig-alt="White background slide with confetti in corners and handwritten arrow with Novice on left, Expert on right"}
 
 ::: {.notes}
+let's clarify real quick who is a "data" person
+you may have noticed the "" around non data. that's intentional 
 
+usually self-designated (I think anyone/everyone can be a data person, but on a spectrum; we aren't/don't
+have to be at same level) 
+we also can be experts in some things, and novices in others
+:::
+
+## {background-image="imgs/Who_Slide_2.png" fig-alt="White background slide with confetti in corners and handwritten arrow with Novice on left, Expert on right. Arrow with blue asterisk points closer to novice"}
+
+:::{.notes}
+you might be here on spectrum for something
+:::
+
+## {background-image="imgs/Who_Slide_3.png" fig-alt="White background slide with confetti in corners and handwritten arrow with Novice on left, Expert on right. Arrow with blue asterisk points closer to novice. Sencond arrow points closer to expert"}
+
+:::{.notes}
+or maybe closer to expert
+or any number of places in between
+the place on the spectrum doesn't matter as much as we know that we all exist somewhere on it
+:::
+
+
+## {background-image="imgs/Who_Slide_4.png" fig-alt="White background slide with confetti in corners and several handwritten, swirling arrows from Novice on left to Expert on right."}
+
+:::{.notes}
 "worth noting that" line from novice to expert may not be at all
 straight, and that it's not a single line. It probably more looks like a
-swirling, multi-branched tree/plant root ("choose your own adventure"
-style) --\> because we all might be "experts" in diff things, it's
-worthwhile sharing what we know! remember, quote from before about
-common blindspots!
+swirling, multi-branched tree/plant root ("choose your own adventure" style) 
+because we all might be "experts" in diff things, it's worthwhile sharing what we know! remember, quote from before about common blindspots!
 
-Use this as a "real quick let's clarify who is a "data" person" moment
-to say why I've been putting quotes around it
-
-**Maybe consider putting this before the 'why'? Feels like a back
-tracking...so be careful about that** a. Who is a "non data" --\> **do I
-need to incl this? --\> can make short/quick** (mention this is why
-there are quotes around it) b. usually self-designated (I think
-anyone/everyone can be a data person, but on a spectrum; we aren't/don't
-have to be at same level) c. who you should be talking to 1. if you work
-in an org, talk with people not on your team, or people that you may
-work w/ obliquely
+so when you're looking for people to talk to, look around, it's probably could be anyone...perhaps if you work in an org, talk with people not on your team, or people that you may work w/ obliquely
 :::
 
-## {background-image="imgs/Who_Slide_2.png"}
-
-## {background-image="imgs/Who_Slide_3.png"}
-
-## {background-image="imgs/Who_Slide_4.png"}
-
-## {background-image="imgs/XY_Axis_Slide.png"}
+## {background-image="imgs/XY_Axis_Slide.png" fig-alt="White background slide with confetti in corners and handwritten xy-axis chart. X axis goes from Less Technical on left to More Technical on right, Y axis goes from Personal on bottom to General on top."}
 
 ::: {.notes}
-what to say depends on level of person/where they are on data
-    spectrum Like are we going full on theme party (maybe into the weeds
-    on a ML model) or staying a bit more high level with some small talk
-    (maybe get excited about an interesting data journalism article on
-    music taste you saw float by on Twitter recently) The "what" could
-    be educational, it could be entertaining, it could be both ('pique
-    the curiosity'). Depends on the rest of the party invite
+what to say depends on level of person/where they are on data spectrum 
+Like are we going full on theme party (maybe into the weeds on a ML model) or staying a bit more high level with some small talk (maybe get excited about an interesting data journalism article you saw float by on Twitter recently) 
+
+The "what" could be educational/entertaining/both ('pique the curiosity'). Depends on the rest of the party invite
 :::
 
-## {background-image="imgs/XY_Axis_Slide_Filled_In.png"}
+## {background-image="imgs/XY_Axis_Slide_Filled_In.png" fig-alt="White background slide with confetti in corners and handwritten xy-axis chart. X axis goes from Less Technical on left to More Technical on right, Y axis goes from Personal on bottom to General on top. Quadrants are filled in; upper left says Music Borders; Upper right says Gold Record Data Art; Lower left says Spotify Wrapped; Lower right says How Bad is you streaming music?"}
 
 :::{.absolute top="73%" left="15%"}
 [Spotify Wrapped](https://newsroom.spotify.com/2021-12-01/the-wait-is-over-your-spotify-2021-wrapped-is-here/){style="font-size: x-large;"}
@@ -181,39 +186,44 @@ what to say depends on level of person/where they are on data
 [Pudding's Judge My Spotify](https://pudding.cool/2021/10/judge-my-music/){style="font-size: x-large;"}
 :::
 
-## {background-image="imgs/Where_When.png"}
+:::{.notes}
+Let's take music as a category example and see how we could talk about each thing.
+START LOWER LEFT W/ SPOTIFY WRAP
+call out pudding, if haven't heard of it
+:::
+
+## {background-image="imgs/Where_When.png" fig-alt="White background with confetti in corners; yellow cocktail table drawn on left, and calendar of July on right"}
 
 ::: {.notes}
+lol always and forever
+consider where people encounter data/viz
 Consider: Is this a last minute backyard hangout or a wedding planned
-months in advance? The where/when and what might also inform the others.
+months in advance? 
+The where/when and what might also inform the others.
 E.g. if you want/need to deep dive on something to bridge
 understanding/knowledge gap, it makes sense to set up time in advance to
 discuss, so the audience has some sense of what they are getting into.
 If you're casually bringing it up in a way to entertain/show another
 side of data (e.g. a new/unexpected place to find data, or a creative
 data use), the where/when might be over lunch, or a brief meeting in a
-hallway, or maybe even something you share on social media (??)
-
-a.  lol always and forever
-b.  in seriousness: where could be small doses?
-c.  when: pre-emptive meetings
-d.  consider where people encounter data/viz
+hallway, etc
 :::
 
-## {background-image="imgs/Sci_Art.png"}
+## {background-image="imgs/Sci_Art.png" fig-alt="White background with confetti in corners, equation of Data=Science+Art handwritten on slide"}
 
 ::: {.notes}
 like mentioned at beginning, data are a lot more than what we might think about 
 
-"data are art + science"; so much more than just numbers (can be charts,
+REMEMBER "data are art + science"; so much more than just numbers (can be charts,
 vizzes, categories, counts, used for/tracked on/predicted for so many
-things Maybe Transition: so because there are so many different ways to
+things
+because there are so many different ways to
 interpret "what data is" there's also a lot of misconceptions about it.
 So it's important to talk about data with everyone, not just those who
 are "data people"
 :::
 
-## {background-image="imgs/Why_Blank.png"}
+## {background-image="imgs/Why_Blank.png" fig-alt="White background with confetti in corners"}
 
 ::: {.column width="50%"}
 ::: {.fragment .semi-fade-out .absolute top="10%" width="50%"}
@@ -222,7 +232,7 @@ Penguins come in all shapes and sizes. Gentoo penguins tend to have the longest 
 
 ::: {.fragment .fade-in-then-semi-out .absolute bottom="30%"}
 
-```{r}
+```{r, fig.alt="Table of penguin flipper measurements by species"}
 library(tidyverse)
 
 palmerpenguins::penguins %>%
@@ -262,33 +272,15 @@ palmerpenguins::penguins %>%
 :::
 
 ::: {.notes}
-TODO: make image of table of numbers --\> viz (use palmer penguins as
-example). make something for these 4: (in text, in table, in single
-stats, in viz) of palmer penguins. Maybe incl slide before one with all
-4 things of penguins wandering gif/pushing each other into ice
-
 you could go out an count penguins all day, and maybe that's what you
-do. but if that was the only way to learn about them for everyone, then
-we might not get too far. we rely on others' data to summarize, to
-count, to understand the world around us. and if we present data in
-different ways (in text, in table, in single stats, in viz) we'll be
-able to understand different aspects/maybe learn something new
+do. but that's not what I'm gonna do. I rely on others collection to learn new stuff
 
 this is just one example of how data can be used as an accessibility
 tool. numbers themselves can be a way to summarise information, and if
 we show numbers/data in a particular way, it can make the info more (or
 less) clear and accessible to folks.
 
-Mention accessibility (maybe elaborate in the how section) HOW DOES
-ACCESSIBILITY FACTOR IN? --\> **TBD on including this??** --\> yes,
-include! in maybe where or why or how Visualizations themselves are an
-accessibility tool, rather than looking at a block of numbers in a
-spreadsheet or table. Of course, there are lots of ways to make
-visualizations more/less accessible (that's a topic for a whole other
-talk and there area numerous resources available, so we won't get too in
-the weeds there) By realizing what data literacy is and why it's
-important for us all to have some level of it, we (looking at those who
-are deeper in the tech/data world) can lend a hand to others.
+learn not just about penguins, but also able to interpret current events in world (e.g. covid charts)
 :::
 
 ## {background-image="imgs/How.png"}
